--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Bill Book</string>
-    <string name="title_activity_main">Bill Book</string>
-    <string name="package_name">com.billbook.app</string>
-    <string name="custom_url_scheme">com.billbook.app</string>
+    <string name="app_name">JLS Suite</string>
+    <string name="title_activity_main">JLS Suite</string>
+    <string name="package_name">com.jls.suite</string>
+    <string name="custom_url_scheme">com.jls.suite</string>
 </resources>
